<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HearthStoneTimer</string>
    <string name="action_settings">Settings</string>
    <string name="enemytimer">0:00</string>
    <string name="mytimer">0:00</string>
    <string name="enemyend">END TURN</string>
    <string name="myend">END TURN</string>
    <string name="startgame">Game Start!</string>
    <string name="endgame">End Game</string>
    <string name="playfirst">Play First</string>
    <string name="playsecond">Play Second</string>
    <color name="yellow">#ffff00</color>
    <color name="orange">#ffa500</color>
    <color name="green">#008000</color>
    <color name="dimgray">#696969</color>
    <color name="gray">#808080</color>
    <color name="darkgray">#a9a9a9</color>

</resources>
