<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.chnr.hearthstonetimer.HearthStoneTimerActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:id="@+id/layout_ad2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#999"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right|center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/EnemyTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enemytimer" />

        <Chronometer
            android:id="@+id/EnemyTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp" />

        <Button
            android:id="@+id/EnemyEndBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/inactive_button"
            android:text="@string/enemyend" />

        <Chronometer
            android:id="@+id/TotalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/abc_action_bar_progress_bar_size" />

        <Button
            android:id="@+id/MyEndBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/inactive_button"
            android:text="@string/myend" />

        <Chronometer
            android:id="@+id/MyTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/MyTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/mytimer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/GameEndBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endgame" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/adlinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

</FrameLayout>