<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Ready"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/layout_ad"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#999"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/GameStart"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:text="@string/startgame" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical" >
    </LinearLayout>

    <RadioGroup
        android:id="@+id/RadioGroup1"
        android:layout_width="match_parent"
        android:layout_height="231dp"
        android:gravity="center_vertical|center_horizontal" >

        <RadioButton
            android:id="@+id/PlayFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playfirst" />

        <RadioButton
            android:id="@+id/DrawFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playsecond" />
    </RadioGroup>

</FrameLayout>